deploy-service-ingress-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: php-app2

---
apiVersion: v1
kind: Service
metadata:
  name: php-app2-svc
  namespace: php-app2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: php-app2
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app2-ingress
  namespace: php-app2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test1.bibhtech.in
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: php-app2-svc
              port:
                number: 80
          path: /
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app2
  namespace: php-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app2
  template:
    metadata:
      labels:
        app: php-app2
    spec:
      containers:
      - name: php-app2
        image: httpd:latest
        ports:
        - containerPort: 80
